@@ -35,11 +35,11 @@ public class ColorUtilTest {
 
     private static Stream<Arguments> provideToRGBACodeTest() {
         return Stream.of(
-                Arguments.of(C1, String.format("rgba(51,102,255,%f)", 1.0)),
-                Arguments.of(C2, String.format("rgba(255,255,255,%f)", 1.0)),
-                Arguments.of(C3, String.format("rgba(0,0,0,%f)", 0.0)),
-                Arguments.of(C4, String.format("rgba(255,255,255,%f)", 1.0)),
-                Arguments.of(C5, String.format("rgba(153,204,127,%f)", 0.3))
+                Arguments.of(C1, "rgba(51,102,255,%f)".formatted(1.0)),
+                Arguments.of(C2, "rgba(255,255,255,%f)".formatted(1.0)),
+                Arguments.of(C3, "rgba(0,0,0,%f)".formatted(0.0)),
+                Arguments.of(C4, "rgba(255,255,255,%f)".formatted(1.0)),
+                Arguments.of(C5, "rgba(153,204,127,%f)".formatted(0.3))
         );
     }
 
